--- a/docker/procesamiento/Dockerfile
+++ b/docker/procesamiento/Dockerfile
@@ -1,11 +1,17 @@
-FROM python:3.9-slim
+# docker/procesamiento/Dockerfile
+FROM python:3.11.5
 
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copiar todos los scripts necesarios
 COPY KDD/ KDD/
-COPY ProcesamientoMain.py ProcesamientoMain.py
+COPY paths.py /app/
+COPY KDD/data KDD/data
 
-ENTRYPOINT ["python", "ProcesamientoMain.py"]
+# Establecer el PYTHONPATH
+ENV PYTHONPATH=/app/KDD/Procesamiento:/app
+
+ENTRYPOINT ["python", "KDD/Procesamiento/ProcesamientoMain.py"]
