--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
     volumes:
@@ -18,6 +19,12 @@ services:
       dockerfile: docker/load_database/Dockerfile
     depends_on:
       - db
+    environment:
+      DATABASE_NAME: mydatabase
+      DATABASE_USER: user
+      DATABASE_PASSWORD: password
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
 
   backend:
     build:
@@ -28,7 +35,6 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
       - load_database
     environment:
       DATABASE_NAME: mydatabase
@@ -42,25 +48,11 @@ services:
       context: .
       dockerfile: docker/frontend/Dockerfile
     volumes:
-      - ./frontend:/app
+      - ./Sistema/frontend:/app
     ports:
       - "3000:3000"
     depends_on:
       - backend
-
-  procesamiento:
-    build:
-      context: .
-      dockerfile: docker/procesamiento/Dockerfile
-    depends_on:
-      - db
-
-  KDD:
-    build:
-      context: .
-      dockerfile: docker/KDD/Dockerfile
-    depends_on:
-      - db
 
 volumes:
   postgres_data:
